2005-07-16  Romain Francoise  <romain@orebokech.com>

	* gnus-uu.el (gnus-uu-save-article): Use `message-make-date'
	instead of `current-time-string' as the latter creates a time
	string that is not RFC 2822 compliant (it lacks the zone).
	Update copyright notice.

2005-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page): Use gnus-end-of-window.
	(gnus-article-next-page-1): Use gnus-beginning-of-window.
	(gnus-article-prev-page): Ditto.

	* gnus-util.el (gnus-beginning-of-window): New function.
	(gnus-end-of-window): New function.

	* lpath.el: Bind header-line-format and scroll-margin for XEmacs.

2005-07-14  Hiroshi Fujishima  <hiroshi.fujishima@gmail.com>  (tiny change)

	* gnus-score.el (gnus-score-edit-all-score): Set
	gnus-score-edit-exit-function to gnus-score-edit-done and call
	gnus-message.

2005-07-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-salt.el (gnus-pick-mode): Remove the 5th arg of
	add-minor-mode.
	(gnus-binary-mode): Ditto.

	* gnus-topic.el (gnus-topic-mode): Ditto.

2005-07-08  Ralf Angeli  <angeli@iwi.uni-sb.de>  (tiny change)

	* gnus-art.el (gnus-article-next-page, gnus-article-next-page-1)
	(gnus-article-prev-page): Take scroll-margin into consideration.

2005-07-04  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-07-04  Juanma Barranquero  <lekktu@gmail.com>

	* gnus.el (gnus-exit):
	* gnus-group.el (gnus-group-icons):
	* nnmail.el (nnmail-prepare): Fix typos in docstrings.

	* gnus-nocem.el (gnus-nocem):
	* message.el (message-various, message-buffers, message-sending)
	(message-interface, message-forwarding, message-insertion)
	(message-headers, message-news, message-mail):
	* pgg-gpg.el (pgg-gpg):
	* pgg-parse.el (pgg-parse):
	* pgg-pgp.el (pgg-pgp):
	* pgg-pgp5.el (pgg-pgp5):
	* pop3.el (pop3): Finish `defgroup' description with period.

2005-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-face): Improve the efficiency.